<resources>
    <string name="app_name">Veterinaria</string>
    <string name="title_active_login">Iniciar Sesión</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre completo</string>
    <string name="email">Email</string>
    <string name="login">Iniciar Sesión</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Iniciar Sesión</string>
    <string name="text_signup">No tienes cuenta?</string>
    <string name="link_signup">Registrarse</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="update_Home">Inicio</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>


    <!--Producto #2-->
    <string name="name2">Productos</string>
    <string name="title_activity_main">Productos</string>
    <string name="title_activity_add">Nuevo producto</string>
    <string name="title_activity_edit">Datos del producto</string>
    <string name="name_form">Nombre</string>
    <string name="date_form">Categoría</string>
    <string name="url_form">Url imagen</string>
    <string name="description_form">Descripción</string>
    <string name="save">Guardar</string>
    <string name="description">Desarrollada por el grupo Dispositivos mobiles</string>

    <!--Expediente #3-->

    <string name="name3">Expediente</string>
    <string name="title_activity_main3">Expedientes</string>
    <string name="title_activity_add3">Expediente Nuevo</string>
    <string name="title_activity_edit3">Datos del expediente</string>
    <string name="name_form3">Nombre</string>
    <string name="date_form3">Raza</string>
    <string name="url_form3">Url imagen</string>
    <string name="description_form3">Descripción</string>
    <string name="save3">Guardar</string>
    <string name="description3">Desarrollada por el grupo Dispositivos mobiles</string>

    <!--Contactenos-->

    <string name="contact_title">Contáctenos</string>
    <string name="msg_phone_call">Realizar llamada telefónica</string>
    <string name="msg_whatsapp_send">Enviar mensaje WhatsApp</string>
    <string name="msg_web_view">Abrir sitio Web</string>
    <string name="msg_saludos">Saludos amigos</string>
    <string name="msg_mensaje_correo">Le escribo este correo para</string>
    <string name="msg_data">faltan datos</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>