<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#27283a"
    tools:context=".MainContactenos">

<View
android:id="@+id/view"
android:layout_width="match_parent"
android:layout_height="100dp"
android:background="@color/purple_500"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent" />
<TextView
android:id="@+id/titleAddTextView"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center"
android:text="@string/contact_title"
android:textColor="@color/white"
android:textSize="32sp"
app:layout_constraintBottom_toBottomOf="@+id/view"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.0"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="@+id/view"
app:layout_constraintVertical_bias="0.526" />
<androidx.cardview.widget.CardView
android:id="@+id/cardView"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="#05C60E0E"
app:cardCornerRadius="40dp"
app:cardElevation="0dp"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent" />

<LinearLayout
android:id="@+id/linearLayout4"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="#251B59"
android:orientation="horizontal"
app:layout_constraintBottom_toTopOf="@+id/cardView"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
tools:ignore="MissingConstraints">
<ImageView
    android:id="@+id/bt_phone"
    android:layout_width="0dp"
    android:layout_height="92dp"
    android:layout_weight="1"
    android:contentDescription="@string/msg_phone_call"
    android:src="@drawable/ic_phone_icon" />
<ImageView
    android:id="@+id/bt_whatsapp"
    android:layout_width="0dp"
    android:layout_height="92dp"
    android:layout_weight="1"
    android:contentDescription="@string/msg_whatsapp_send"
    android:scaleType="fitCenter"
    android:src="@drawable/whatsapp_logo"
    tools:ignore="ImageContrastCheck" />
<ImageView
    android:id="@+id/bt_web"
    android:layout_width="0dp"
    android:layout_height="92dp"
    android:layout_weight="1"
    android:contentDescription="@string/msg_web_view"
    android:scaleType="fitCenter"
    android:src="@drawable/web_logo" />
</LinearLayout>

    <ImageView
        android:id="@+id/bt_google_maps"
        android:layout_width="351dp"
        android:layout_height="333dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_google_maps" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="266dp"
        android:layout_height="42dp"
        android:layout_marginTop="52dp"
        android:text="Desea ver la ubicación?"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


</androidx.constraintlayout.widget.ConstraintLayout>